20DIC2022: ejemplos Algoritmo Regresion Logistica

--- a/lab_arboles_desicion.ipynb
+++ b/lab_arboles_desicion.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#   Lmportamos la libreria pandas para la lectura de archivos\n",
+    "#   Importamos la libreria pandas para la lectura de archivos\n",
     "import pandas as pd\n",
     "\n",
     "#   Librerias para graficar los datos\n",
@@ -111,12 +111,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#   Recordemos que los algoritmos de sklearn 'no' trabajan con variables categoricas, como en este caso, \n",
+    "#   por lo que es necesario transformar la informacion de valores numericos.\n",
+    "\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "le = LabelEncoder()\n",
     "for i in df.columns:\n",
     "    df[i] = le.fit_transform( df[i] )\n",
     "\n",
-    "df.head()"
+    "df.sample(10)"
    ]
   },
   {
@@ -153,6 +156,7 @@
    "source": [
     "#   Cargamos los algoritmos\n",
     "models = []\n",
+    "\n",
     "models.append( ( 'LR', LogisticRegression( solver = 'liblinear', multi_class = 'ovr' ) ) )\n",
     "models.append( ( 'CART', DecisionTreeClassifier() ) )"
    ]
@@ -163,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#   Evaluamos cada modelo por turno\n",
+    "#   Evaluamos los modelos Logistic Regresion, y CART\n",
     "results = []\n",
     "names = []\n",
     "for name, model in models:\n",
@@ -171,8 +175,7 @@
     "    cv_results = cross_val_score( model, X_train, Y_train, cv = kfold, scoring = 'accuracy' )\n",
     "    results.append( cv_results )\n",
     "    names.append(name)\n",
-    "    print( '%s: %f (%f)' % ( name, cv_results.mean(), cv_results.std() ) )\n",
-    "\n"
+    "    print( '%s: %f (%f)' % ( name, cv_results.mean(), cv_results.std() ) )"
    ]
   },
   {
@@ -190,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,66 +209,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9714285714285714\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#   Evaluaciones las predicciones, en primer lugar la precision obtenida\n",
+    "#   Evaluamos la exactitud (accuracy) las predicciones, en primer lugar la precision obtenida\n",
     "print( accuracy_score( Y_validation, predictions ) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 71   4   2   0]\n",
-      " [  1  17   0   0]\n",
-      " [  2   1 242   0]\n",
+      "[[ 73   3   1   0]\n",
+      " [  0  18   0   0]\n",
+      " [  1   1 243   0]\n",
       " [  0   0   0  10]]\n"
      ]
     }
    ],
    "source": [
-    "#   Ahora la matriz de confusion\n",
-    "print( confusion_matrix( Y_validation, predictions ) )"
+    "#   Ahora elaboramos la matriz de confusion\n",
+    "cfn_matrix = confusion_matrix( Y_validation, predictions )\n",
+    "print( cfn_matrix )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.96      0.92      0.94        77\n",
-      "           1       0.77      0.94      0.85        18\n",
-      "           2       0.99      0.99      0.99       245\n",
-      "           3       1.00      1.00      1.00        10\n",
-      "\n",
-      "    accuracy                           0.97       350\n",
-      "   macro avg       0.93      0.96      0.95       350\n",
-      "weighted avg       0.97      0.97      0.97       350\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "class_names = [0,1]\n",
+    "\n",
+    "#   Obtenemos las variables figura y ejes del gráfico (nos permite cambiar los atributos propios de cada seccion)#   Obtenemos las variables figura y ejes del gráfico (nos permite cambiar los atributos propios de cada seccion)\n",
+    "fig,ax = plt.subplots() \n",
+    "\n",
+    "#definimos los valores que van a tener las líneas de guía\n",
+    "tick_marks = np.arange( len( class_names ) )  \n",
+    "plt.xticks(tick_marks, class_names)\n",
+    "\n",
+    "#definimos los tick marks en el gráfico\n",
+    "plt.yticks(tick_marks, class_names) \n",
+    "\n",
+    "# Vamos a mostrar la matriz de confusión utilizando la libreria seaborn\n",
+    "sns.heatmap( pd.DataFrame( cfn_matrix ), annot = True, cmap = 'Blues_r', fmt = 'g' )\n",
+    "ax.xaxis.set_label_position('top')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.title( 'Matriz de confusión', y = 1.1 )\n",
+    "plt.ylabel( 'Etiqueta Actual' )\n",
+    "plt.xlabel( 'Etiqueta de Predicción' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#   Informe de clasificacion\n",
     "print( classification_report( Y_validation, predictions ) )"
