21DIC2022: Ajuste algoritmo CART, caso creacion de datos de prueba y de validacion

--- a/lab_arboles_desicion.ipynb
+++ b/lab_arboles_desicion.ipynb
@@ -155,10 +155,9 @@
    "outputs": [],
    "source": [
     "#   Cargamos los algoritmos\n",
-    "models = []\n",
-    "\n",
-    "models.append( ( 'LR', LogisticRegression( solver = 'liblinear', multi_class = 'ovr' ) ) )\n",
-    "models.append( ( 'CART', DecisionTreeClassifier() ) )"
+    "#   models = []\n",
+    "#   models.append( ( 'LR', LogisticRegression( solver = 'liblinear', multi_class = 'ovr' ) ) )\n",
+    "#   models.append( ( 'CART', DecisionTreeClassifier() ) )"
    ]
   },
   {
@@ -168,14 +167,14 @@
    "outputs": [],
    "source": [
     "#   Evaluamos los modelos Logistic Regresion, y CART\n",
-    "results = []\n",
-    "names = []\n",
-    "for name, model in models:\n",
-    "    kfold = StratifiedKFold( n_splits = 10, shuffle = True, random_state = 1 )\n",
-    "    cv_results = cross_val_score( model, X_train, Y_train, cv = kfold, scoring = 'accuracy' )\n",
-    "    results.append( cv_results )\n",
-    "    names.append(name)\n",
-    "    print( '%s: %f (%f)' % ( name, cv_results.mean(), cv_results.std() ) )"
+    "#   results = []\n",
+    "#   names = []\n",
+    "#   for name, model in models:\n",
+    "    #   kfold = StratifiedKFold( n_splits = 10, shuffle = True, random_state = 1 )\n",
+    "    #   cv_results = cross_val_score( model, X_train, Y_train, cv = kfold, scoring = 'accuracy' )\n",
+    "    #   results.append( cv_results )\n",
+    "    #   names.append(name)\n",
+    "    #   print( '%s: %f (%f)' % ( name, cv_results.mean(), cv_results.std() ) )"
    ]
   },
   {
@@ -184,11 +183,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot\n",
-    "\n",
-    "pyplot.boxplot( results, labels = names )\n",
-    "pyplot.title( 'Comparación de algoritmos' )\n",
-    "pyplot.show()"
+    "#   from matplotlib import pyplot\n",
+    "#   pyplot.boxplot( results, labels = names )\n",
+    "#   pyplot.title( 'Comparación de algoritmos' )\n",
+    "#   pyplot.show()"
    ]
   },
   {
@@ -219,16 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 73   3   1   0]\n",
-      " [  0  18   0   0]\n",
-      " [  1   1 243   0]\n",
+      "[[ 71   4   2   0]\n",
+      " [  1  17   0   0]\n",
+      " [  2   1 242   0]\n",
       " [  0   0   0  10]]\n"
      ]
     }
@@ -249,7 +247,7 @@
     "\n",
     "class_names = [0,1]\n",
     "\n",
-    "#   Obtenemos las variables figura y ejes del gráfico (nos permite cambiar los atributos propios de cada seccion)#   Obtenemos las variables figura y ejes del gráfico (nos permite cambiar los atributos propios de cada seccion)\n",
+    "#   Obtenemos las variables figura y ejes del gráfico (nos permite cambiar los atributos propios de cada seccion)\n",
     "fig,ax = plt.subplots() \n",
     "\n",
     "#definimos los valores que van a tener las líneas de guía\n",
